# pairassembler

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  INSTALL.sh  LICENSE  README.md  cbindgen.toml  clippy.toml  justfile  rustfmt.toml
.cargo/: config-portable.toml  config.toml
.github/workflows/: ci.yml  release.yml
benches/: Cargo.toml  README.md
benches/config/: benchmark.env.example  datasets.tsv  tools.env.example
benches/src/: artifacts.rs  cli.rs  commands.rs  compare.rs  config.rs  db.rs  fastq.rs  fetch.rs  main.rs  manifest.rs  model.rs  prepare.rs  process.rs  products.rs  report.rs  run.rs  shell.rs  summarize.rs  tool.rs  ui.rs  validate.rs  vcs.rs
c-pairassembler/include/: libpairassembly.h
libpairassembly/: Cargo.toml
libpairassembly/src/: assembler.rs  c_abi.rs  correct.rs  correction.rs  errors.rs  io.rs  lib.rs  merge.rs  overlap.rs  prelude.rs  read.rs  test_fixtures.rs  validate.rs  validation.rs  workflow.rs
libpairassembly/src/assembler/: capability.rs  config.rs  context.rs  input.rs  ops.rs  process_iter.rs  traits.rs  typestate.rs
libpairassembly/src/assembler/tests/: builder.rs  capability_traits.rs  common.rs  context_paths.rs  custom_pipeline.rs  error_paths.rs  mod.rs  overlap_properties.rs  process.rs
libpairassembly/src/overlap/: bounds.rs  finder.rs  methods.rs  mod.rs  pair_overlap.rs  params.rs  slices.rs
libpairassembly/src/overlap/methods/: bbmerge.rs  fastp.rs
pairassembler/: Cargo.toml
pairassembler/benches/: compute.rs  e2e_pipeline.rs  fastq_merge.rs  in_memory_merge.rs
pairassembler/src/: cli.rs  lib.rs  main.rs  merging.rs  progress.rs  report.rs  stats.rs
pairassembler/src/merging/: input.rs  mod.rs  orchestrator.rs  output.rs  records.rs
pairassembler/tests/: cli.rs
pairassembler/tests/support/: mod.rs
py-pairassembler/: Cargo.toml
