[workspace]
members = [
    "pairassembler",
    "libpairassembly", "pairing_macros", "py-pairassembler",
]
resolver = "2"

[workspace.package]
description = ""
authors = ["Nicholas Minor <nrminor@wisc.edu>"]
edition = "2021"
readme = "README.md"
license = "MIT"
rust-version = "1.74.1"
repository = "https://github.com/nrminor/pairassembler"
homepage = "https://github.com/nrminor/pairassembler"
documentation = "https://github.com/nrminor/pairassembler/blob/main/README.md"
keywords = ["science", "reproducibility", "bioinformatics", "data"]
categories = ["command-line-utilities", "science"]
exclude = []

[workspace.dependencies]
color-eyre = "0.6.3"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = "symbols"


