[workspace]
members = [
  "pairassembler",
  "libpairassembly",
  "py-pairassembler",
  "libpairassembly_macros",
]
resolver = "2"

[workspace.package]
description = ""
authors = ["Nicholas Minor <nrminor@wisc.edu>"]
edition = "2021"
readme = "README.md"
license = "MIT"
rust-version = "1.74.1"
repository = "https://github.com/nrminor/pairassembler"
homepage = "https://github.com/nrminor/pairassembler"
documentation = "https://github.com/nrminor/pairassembler/blob/main/README.md"
keywords = ["science", "reproducibility", "bioinformatics", "data"]
categories = ["command-line-utilities", "science"]
exclude = []

[profile.release]
lto = "fat"
opt-level = "z"
codegen-units = 1
incremental = true
panic = "abort"
strip = "symbols"

[profile.dev]
incremental = true
lto = false
