[workspace]
members = [
  "pairassembler",
  "libpairassembly",
  "py-pairassembler",
]
resolver = "3"

[workspace.package]
description = ""
authors = ["Nicholas Minor <nrminor@wisc.edu>"]
edition = "2024"
readme = "README.md"
license = "MIT"
rust-version = "1.93.0"
repository = "https://github.com/nrminor/pairassembler"
homepage = "https://github.com/nrminor/pairassembler"
documentation = "https://github.com/nrminor/pairassembler/blob/main/README.md"
keywords = ["science", "reproducibility", "bioinformatics", "data"]
categories = ["command-line-utilities", "science"]
exclude = []

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
unwrap_used = "deny"

[profile.release]
lto = "fat"
opt-level = "z"
codegen-units = 1
incremental = true
panic = "abort"
strip = "symbols"

[profile.dev]
incremental = true
lto = false
