[package]
name = "pairasm-benches"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
color-eyre = "0.6.4"
flate2 = { version = "1.1.1", default-features = false, features = ["zlib-rs"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
