[package]
name = "libpairassembly"
version = "0.1.0"
description.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
anyhow = "1.0.98"
color-eyre = "0.6.4"
futures = "0.3.31"
itertools = "0.14.0"
noodles-fastq = { version = "0.17.0", optional = true }
rayon = "1.10.0"
rustc-hash = "2.1.1"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[features]
default = ["noodles"]
noodles = ["noodles-fastq"]

# Fallback feature for disabling all parsers
no_fq_parser = []

[lints]
workspace = true

[dev-dependencies]
proptest = "1.6.0"
