[package]
name = "libpairassembly"
version = "0.1.0"
description.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
itertools = "0.14.0"
rayon = { version = "1.10.0", optional = true }
rustc-hash = "2.1.1"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wide = "1.2.0"

[features]
default = ["parallel"]
parallel = ["dep:rayon"]

[lints]
workspace = true

[dev-dependencies]
proptest = "1.6.0"
