[package]
name = "pairassembler"
version = "0.1.0"
description.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[lib]
name = "pairassembler"
path = "src/lib.rs"

[[bin]]
name = "pairasm"
path = "src/main.rs"

[dependencies]
clap = "4.5.39"
clap-verbosity-flag = "3.0.3"
color-eyre = "0.6.4"
serde = { version = "1.0.203", features = ["serde_derive", "derive", "rc"] }
tokio = { version = "1.9.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
libpairassembly = { path = "../libpairassembly", features = ["noodles"]}
noodles = { version = "0.93.0", features = ["fastq", "async"] }
async-compression = { version = "0.4.23", features = ["tokio", "gzip"] }
futures = "0.3.31"
flate2 = "1.1.1"

[lints]
workspace = true

