[package]
name = "pairassembler"
version = "0.1.0"
description.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[lib]
name = "pairassembler"
path = "src/lib.rs"

[[bin]]
name = "pairasm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
color-eyre = "0.6.4"
indicatif = "0.18.4"
serde = { version = "1.0.203", features = ["serde_derive", "derive", "rc"] }
serde_json = "1.0.117"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
libpairassembly = { path = "../libpairassembly" }
noodles = { version = "0.93.0", features = ["fastq"] }
flate2 = "1.1.1"
rayon = "1.10.0"

[dev-dependencies]
assert_cmd = "2.0.16"
criterion = "0.7.0"
tempfile = "3.15.0"

[[bench]]
name = "compute"
harness = false

[[bench]]
name = "e2e_pipeline"
harness = false

[lints]
workspace = true
